ensure admin for find method
